# VoxelReg

./: .gitignore  README.md  bone_quantification.ipynb  check_ITK_TXM_Nifti.py  convert.py  convert_tiff.py  create_mask.py  create_masks.ipynb  data_exploration.ipynb  elastix_automatic_registration.py  elastix_automatic_registration_dask.py  elastix_automatic_stitching.py  elastix_registration.py  initv2.sh  jupyter.sh  load_test.py  main.py  mask_vol.py  merge_vol.py  modify_affine.py  ome_playground.py  padding_pipeline.ipynb  playground.py  postprocess.py  preprocess.py  preprocess_image_pair.py  preprocess_image_pair_dask.py  preprocess_image_pair_dask_V2.py  pyproject.toml  pyramid_to_ome.py  requirements.txt  run_transformix.py  save_paired_tiffs.py  split_vol.py  test.txt  tiff2zarr.py  transformix_example.py  transformix_example2.py  viz_registration.ipynb  write_ome_dataset.py  (+1 more)
batch_jobs/: convert_tiff.sh  multicore_job.sh  preprocess_4x.sh  preprocess_LFOV.sh  registration.sh
elastix/: ITK_Example12_DifferentSizeTransformation.ipynb  affine_elastix_test.py  elastix_init_transform.py  elastix_refine.py  elastix_sweep.py  elastix_test.py  elastix_test_3D.py  elastix_test_3D_2.py  elastix_test_3D_Larch.py  elastix_transformix_test.py
transforms/: ITK-Transform.tfm  pos_1_init_transform.0.txt
utils/: transformix_example3.py  utils_concurrent.py  utils_dask.py  utils_elastix.py  utils_image.py  utils_itk.py  utils_label.py  utils_nifti.py  utils_npy.py  utils_path.py  utils_plot.py  utils_preprocess.py  utils_tiff.py  utils_txm.py  utils_zarr.py
